crates/oxc_css_parser/tests/error/scss/at-rule/sass-import/trailing-comma.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `<string>`, but found `;`
  ┌─ trailing-comma.scss:4:1
  │
4 │ ;
  │ ^


